Refactored how we pullup operators through the DAG by simplifying NowFilter and changing TopNConstraint to Deduplication. Reworked materialization and DAG planning as well as DAG expansion rules. Implemented primary key lookup for Resolve. Implemented adding columns. Started implementing physical planning by refactoring Flink integration and DDL statement generation. FlinkPhysicalIT is stubbed out but not yet ready.